Fixed gap at the top of the front page when the user is signed out.

--- a/sites/all/themes/cdagris/less/style.less
+++ b/sites/all/themes/cdagris/less/style.less
@@ -254,6 +254,9 @@ html {
           padding-top: 0px !important;
         }
       }
+      &.navbar-is-fixed-top {
+        padding-top: 0px !important;
+      }
     }
     &.page-user {
       h1.page-header {
