--- a/sites/all/themes/ilri/less/style.less
+++ b/sites/all/themes/ilri/less/style.less
@@ -219,6 +219,9 @@ body {
         padding-top: 0px !important;
       }
     }
+    &.navbar-is-fixed-top {
+      padding-top: 0px !important;
+    }
   }
 }
 
